--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,19 @@
-.references td:first-child {
-  width: 50px;
+.references {
+  display: grid;
+  grid-template-rows: 1fr;
 }
-.references td {
-  border: none !important;
-  vertical-align: top;
+
+.citation {
+  padding: 6px 13px;
+  display: grid;
+  grid-template-columns: 5% 95%;
+  grid-template-rows: 1fr;
+  gap: 0 0;
+  grid-template-areas:
+    ". .";
 }
-.references tr {
-  border: none !important;
+
+.citation:nth-of-type(even) {
+  background: #f8f8f8;
 }
+
